k8s/mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongodb/mongodb-community-server:6.0-ubi8
        ports:
          - containerPort: 27017
