k8s/mongodbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodbservice
spec:
  selector:
    app: mongodb
  ports:
  - targetPort: 27017
    port: 27017
