k8s/nodeService.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeappservice
spec:
  selector:
    app: nodeapp
  ports:
  - targetPort: 8081
    port: 8081
